Fri Jun  6 21:16:55 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (COMMON_HEADERS): include ws2tcpip.h.

	* ext/socket/addrinfo.h (addrinfo, getaddrinfo, getnameinfo,
	  freehostent, freeaddrinfo): undef before define because these are
	  macros in some versions of Windows SDK.

	* win32/setup.mak: maybe commit miss.

Fri Jun  6 19:34:22 2008  Akinori MUSHA  <knu@iDaemons.org>

	* mkconfig.rb: hide build path from rbconfig.rb.

	* util.c (ruby_strtod, dtoa): initialize more variables for error
	  handling.

	* io.c (rscheck), marshal.c (w_nbyte, w_bytes, w_unique),
	  (path2class, path2module): constified.

	* pack.c (pack_unpack), process.c (rb_syswait): suppress warnings.

	* suppress warnings on cygwin, mingw and mswin.

Fri Jun  6 19:23:53 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): fix for non-existent files and SFN of
	  symlinks.  [ruby-talk:303736]

Fri Jun  6 18:25:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/iconv: Tests fixed.

Fri Jun  6 17:04:56 2008  Akinori MUSHA  <knu@iDaemons.org>

	* win32/win32.h: include ws2tcpip.h. fixed [ruby-Bugs-20528]

	* lib/time.rb (Time.xmlschema): don't use float.  fix
	  http://rubyforge.org/tracker/index.php?func=detail&group_id=426&atid=1698&aid=20504

	* object.c (rb_obj_alloc): RDoc updated.  a patch from Gaston
	  Ramos <ramos.gaston at gmail.com> in [ruby-core:17073].

	* lib/rdoc.rb: massive spelling correction patch from Evan Farrar
	  <evanfarrar at gmail.com> in [ruby-doc:1382] applied.

	* ext/openssl/ossl_ssl_session.c (ossl_ssl_session_initialize):
	  Add a null check for ssl; submitted by akira yamada
	  in [ruby-dev:34950].

	* ext/openssl/ossl_ssl.c (Init_ossl_ssl): Define OP_NO_TICKET if
	  SSL_OP_NO_TICKET is present; submitted by akira yamada
	  in [ruby-dev:34944].

	* test/openssl/test_ssl.rb (OpenSSL#test_server_session): Add a
	  workaround for the case where OpenSSL is configured with